src/objects/Coverage__c.object
<CustomObject>
    <fields>
        <fullName>ASO__c</fullName>
        <inlineHelpText>*required if Health Program is: Non-exchange private insurance; Private Insurance; COBRA; County Mental Health; County Medically Indigent</inlineHelpText>
        <label>ASO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Coverages</relationshipLabel>
        <relationshipName>Coverages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Exchange_Tier__c</fullName>
        <label>Exchange Tier</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Health_Programs__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Catastrophic</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_Member_Name__c</fullName>
        <formula>HYPERLINK(&quot;/lightning/r/Contact/&quot;&amp; Family_Member__r.Id &amp;&quot;/view&quot;, Family_Member__r.FirstName &amp;&quot; &quot;&amp; Family_Member__r.LastName, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Member__c</fullName>
        <label>Family Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Coverages</relationshipLabel>
        <relationshipName>Coverages</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Health_Plan__c</fullName>
        <label>Health Plan</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Managed_Care__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>HCA_Health_Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Programs__c</fullName>
        <description>This was a table with more fields on Access. will need to explore if keeping this as a picklist will be ok</description>
        <label>Health Programs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_Health_Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Managed_Care__c</fullName>
        <label>Managed Care</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Group_IPA__c</fullName>
        <label>Medical Group/IPA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>[Customized by each org]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medicare_Type_s__c</fullName>
        <label>Medicare Type(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Health_Programs__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>HCA_Medicare_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Private_Insurance_detail__c</fullName>
        <label>Private Insurance detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Health_Programs__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Federal, non ERISA self insured</fullName>
                </value>
                <value>
                    <fullName>ERISA self insured</fullName>
                </value>
                <value>
                    <fullName>Individual (Medically underwritten)</fullName>
                </value>
                <value>
                    <fullName>Individual (other guaranteed issue)</fullName>
                </value>
                <value>
                    <fullName>Individual (HIPAA)</fullName>
                </value>
                <value>
                    <fullName>Self-insured, Self-funded, Non –Federal insured plan</fullName>
                </value>
                <value>
                    <fullName>Small Group</fullName>
                </value>
                <value>
                    <fullName>Large Group</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Coverage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Cov-{00000000}</displayFormat>
        <label>Coverage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lock_coverage_record_after_case_closure</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(ISNEW()), 
ISPICKVAL( Case__r.Status , &quot;Closed&quot;) 
)</errorConditionFormula>
        <errorMessage>You cannot update the coverage record once the related case has been closed</errorMessage>
    </validationRules>
</CustomObject>